fix(kodex): adjust for maven test
- added vm arguments to maven-surefire-plugin

- added configurations to be able to use reflection

- created test/resources source folder and relocated resources